  required to call getFlow on a FlowBuilder that has already been disposed by the FlowAssembler.
* Replaced STATE_TYPE_CONTEXT_PARAMETER parameter used by the TextToViewSelector by END_STATE_VIEW_FLAG_PARAMETER which just
  has a boolean value (a flag). This makes the contract a bit clearer. As a result, the VIEW_STATE_TYPE and END_STATE_TYPE
  constants in TextToViewSelector were also dropped.

Changes in version 1.0 RC3 (23.6.2006)
------------------------------------
Package org.springframework.webflow
* Renamed TransitionSet.transitionMatches to "hasMatchingTransition".
* A flow variable can now be annotated with arbitrary properties to influence behaviour.
* Factored out shared behavior of TransitionSet and StateExceptionHandlerSet into CollectionUtils.
* Renamed FlowExecutionControlContext to RequestControlContext to avoid confusion with the FlowExecutionContext
  and highlight the relationship with the RequestContext.
* Renamed FlowArtifactException to FlowArtifactLookupException and relocated to builder package.
* Renamed StateException to FlowExecutionException.  Revised semantics to ensure it is serializable.
* Renamed StateExceptionHandler to FlowExecutionExceptionHandler.
* Renamed StateExceptionHandlerSet to FlowExecutionHandlerSet.
* Removed FlowExecutionStatistics, merging its only useful method (isActive) into the FlowExecutionContext interface
* Removed unnecessary Event argument from Flow.onEvent and TransitionableState.onEvent.
* Removed CannotExecuteTransitionException, as its use reflected an illegal state.
* Removed NoSuchFlowStateException, as its use reflected an illegal argument.
* Made all exceptions honor serializable contract, removing dependencies on internal transient arguments such as Flow, State, and Transition 
  in favor of serializable artifact identifiers such as the flowId and stateId.
  
Package org.springframework.webflow.action